botones hechos, llamada a api de codigo postal hecha y da resultados con card

--- a/práctica-ciudades/src/components/Boton/Boton.css
+++ b/práctica-ciudades/src/components/Boton/Boton.css
@@ -7,7 +7,7 @@ button{
     text-decoration: underline;
 }
 
-button.activo{
+button.focus{
     background-color: white;
     border-color: white;
     color: blue;
