--- a/práctica-ciudades/src/components/Boton/Boton.css
+++ b/práctica-ciudades/src/components/Boton/Boton.css
@@ -1,14 +1,20 @@
-button{
+.boton {
     background-color: blue;
     color: white;
-    border-radius: 5px;
-    height: 10px;
-    border-color: blue;
-    text-decoration: underline;
+    font-weight: 600;
+    border-radius: 18px;
+    border: 0px;
+    transition: 0.3s;
 }
 
-button.focus{
-    background-color: white;
-    border-color: white;
-    color: blue;
+.boton:hover {
+    background-color: blue;
+    transition: 0.3s;
+    color: white;
+}
+
+.boton:active {
+    background-color: blue;
+    transition: 0.3s;
+    color: white;
 }
