--- a/práctica-ciudades/src/components/MenuSuperior/MenuSuperior.css
+++ b/práctica-ciudades/src/components/MenuSuperior/MenuSuperior.css
@@ -1,34 +1,71 @@
-.contenedor{
-    height: 60px;
-    background-color: blue;
+.container {
     display: flex;
-    justify-content: space-between;
-    
-}
-
-.imagen{
-    margin-top: 10px;
-    margin-left: 10px;
-    height: 30px;
-}
-
-.titulo{
+    width: 100%;
+    padding-bottom: 0.5%;
+    padding-top: 0.5%;
+    background-color: rgba(71, 71, 255, 0.993);
+    align-items: center;
+    height: 150px;
+  }
+  
+  .izquierda {
+    margin-left: 3%;
+    display: flex;
+    width: 200px;
+    align-items: center;
+    justify-content: center;
+  }
+  
+  .izquierda img {
+    width: 150px;
+  }
+  
+  .centro {
+    width: calc(100% - 100px);
+  }
+  
+  .centro h1 {
     color: white;
-    
-}
-
-.div-1, .div-2, .div-3{
-    width: 30%;
-}
-
-.caja-abajo{
+    font-size: 70px;
+    font-weight: 100;
+    letter-spacing: 2px;
+  }
+  
+  .centro h1 {
+    text-align: center;
+  }
+  
+  .derecha {
     display: flex;
-    height: 100%;
-    align-items: flex-end;
+    width: 300px;
+    margin-top: 100px;
+    margin-right: 30px;
+    justify-content: center;
+    gap: 25%;
+    color: white;
+  }
+  
+  .activo{
+    background-color: white;
+    color: black;
+    border-radius: 10%;
+    padding: 10px 10px 30px 10px;
     
-}
-
-.caja-abajo div{
-    
-    margin-right: 5px;
-}
+  }
+  
+  .inactivo{
+    color: white;
+    border-radius: 10%;
+    padding: 10px 10px 30px 10px;
+  }
+  
+  
+  .activo, .inactivo {
+    cursor: pointer;
+  }
+  
+  
+  
+  
+  
+  
