hooks de APis  hechos, falta temperaturas y historial

--- a/práctica-ciudades/src/components/Card/Card.css
+++ b/práctica-ciudades/src/components/Card/Card.css
@@ -12,14 +12,17 @@
     display: flex;
     justify-content: space-between;
     align-items: center;
+    color: white;
+    font-weight: 200;
+    height: 10px;
     
 }
 
 .toggle-button {
-    padding-top: 10px;
-    padding-bottom: 10px;
-    padding-left: 20px;
-    padding-right: 20px;
+    padding-top: 5px;
+    padding-bottom: 5px;
+    padding-left: 10px;
+    padding-right: 10px;
     background-color: red;
     cursor: pointer;
 }
@@ -27,4 +30,5 @@
 .card-content {
     margin-top: 10px;
     background-color: white;
+    border-radius: 10px;
 }
