--- a/práctica-ciudades/src/components/MenuSuperior/MenuSuperior.css
+++ b/práctica-ciudades/src/components/MenuSuperior/MenuSuperior.css
@@ -3,7 +3,7 @@
     width: 100%;
     padding-bottom: 0.5%;
     padding-top: 0.5%;
-    background-color: rgba(71, 71, 255, 0.993);
+    background-color: blue;
     align-items: center;
     height: 150px;
   }
@@ -17,7 +17,7 @@
   }
   
   .izquierda img {
-    width: 150px;
+    width: 100px;
   }
   
   .centro {
@@ -26,7 +26,7 @@
   
   .centro h1 {
     color: white;
-    font-size: 70px;
+    font-size: 50px;
     font-weight: 100;
     letter-spacing: 2px;
   }
