--- a/práctica-ciudades/src/pages/HistorialPage/HistorialPage.css
+++ b/práctica-ciudades/src/pages/HistorialPage/HistorialPage.css
@@ -1,67 +1,4 @@
-.container-historial {
-    width: 100%;
-    height: 100vh;
-    background-color: rgb(255, 255, 255);
-}
-
-.mensaje-error-resultados {
-    margin-left: 30px;
-}
-
-.busqueda-container {
-    padding: 20px 20px 0px 20px;
-}
-
-.busqueda {
-    width: 100%;
-    display: flex;
-    height: 50px;
-    border: 1px solid black;
+li{
+    color: blue;
     cursor: pointer;
-    align-items: center;
-    border-radius: 15px;
-}
-
-.codigo-postal-container {
-    background-color: #6a00ff;
-    height: 100%;
-    display: flex;
-    justify-content: center;
-    border-top-left-radius: 15px;
-    border-bottom-left-radius: 15px;
-    align-items: center;
-    width: 60px;
-}
-
-.codigo-postal-container .codigo-postal {
-    color: white;
-    margin: 0;
-}
-
-.info-container {
-    background-color: white;
-    display: flex;
-    align-items: center;
-    border-top-right-radius: 15px;
-    border-bottom-right-radius: 15px;
-    height: 100%;
-    width: 100%;
-}
-
-.info-container .info {
-    margin: 0;
-    margin-left: 10px;
-}
-
-.boton-container {
-    padding-top: 20px;
-    padding-bottom: 20px;
-    width: 100%;
-    display: flex;
-    justify-content: center;
-}
-
-.boton-container .btn {
-    border-radius: 15px;
-    padding: 10px 20px 10px 20px;
 }
